--- a/warsztaty/porfolio/css/style.css
+++ b/warsztaty/porfolio/css/style.css
@@ -1,23 +1,82 @@
+/*General styles*/
+*{
+    box-sizing: border-box; /*By nieuwzględniać borderów i paddingów podczas obliczania rozmiarów*/
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
+    color: #333;
+/*    background: #427cfe;*/
 }
 
-#header {
-    display: flex;
-    justify-content: center;
+hr {
+    background-color: #007bff;
+    height: 1px;
+    width: 70px;
+    border: 0; /*usuwamy wewnętrzny border czyli border-style: inset; */
 }
 
-.header-content {
-    height: 70vh;
+.btn {
+    background-color: transparent;
+    border: 1px solid #007bff;
+    text-decoration: none; /*uswa podkreślenie*/
+    padding: 14px 20px; /*Rozmiar przycisku (batona) dostosuje się do tekstu który jest w środku*/
+    color: #333;
+    text-transform: uppercase;
+    transition: all 0.3s;
+}
+
+.btn:hover {
+    background-color: #007bff;
+    color: #fff;
+    
+}
+
+
+
+/* Header */
+
+.main-header {
+    display: flex; /*tylko do bezpośrednich dzieci*/
+    justify-content: center; /*poziomo*/
+    align-items: center; /*pionowo*/
+    text-align: center; /*także do wszystkich dzieci ze względu na dziedziczenie czyli np. wnuków itd.*/
+    height: 70vh; /*70% okna przeglądarki*/
+    background-image: url(../img/header.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.main-header h1 {
+    font-size: 4.2em; /*krotność rozmaru czcionki standardowej w przeglądarce - standardowo jest 16px - Gdyby było 4.2rem to brana jest pod uwagę wielkość domyślna przeglądarki lub ustalona przez nas dla całego html font-size*/
+    text-transform: uppercase; /*Duże litery*/
+    color: #007bff;
+    margin: 0; /*Usuwamy, bo taki element jak h1 ma marginesy tj. p*/
+}
+
+.main-header p {
+    font-size: 1.3em;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+    color: #333;
+}
+
+
+header span {
+    color: #427cfe;
+}
+
+
+
+/*
+.main-header-content {
     display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: center;
 }
 
-h1 {
-    text-transform: uppercase;
-}
 
 p {
     text-transform: uppercase;
@@ -28,5 +87,5 @@ span {
 }
 
 h2 {
-    font-weight: 600; /*Przykład ostylowania*/
-}
+    font-weight: 600; Przykład ostylowania
+}*/
