--- a/warsztaty/porfolio/css/style.css
+++ b/warsztaty/porfolio/css/style.css
@@ -1,7 +1,7 @@
 /*General styles*/
 * {
     box-sizing: border-box;
-    /*By nieuwzględniać borderów i paddingów podczas obliczania rozmiarów*/
+    /*By nie uwzględniać borderów i paddingów podczas obliczania rozmiarów*/
 }
 
 body {
@@ -191,4 +191,51 @@ header span {
 
 .portfolio .portfolio-wrapper .portfolio-item h3:hover {
     opacity: 1; /*nieprzeźroczyste*/
+}
+
+/* Contact */
+.contact form {
+    max-width: 700px;
+    margin: 40px auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact form input:not([type='submit']){
+    flex-basis: 48%;
+    padding: 15px;
+    margin-bottom: 15px;
+}
+
+.contact form textarea {
+    flex-basis: 100%;
+    height: 100px;
+    padding: 15px;
+    margin-bottom: 20px;
+}
+
+.contact form .btn {
+    margin: auto;
+}
+
+.contact .social-links {
+    margin-top: 80px;
+}
+
+.contact .social-links a {
+    font-size: 2.5em;
+    margin: 0 20px;
+    color: #007bff;
+}
+
+.contact .social-links a:hover {
+    color: #5a5a5a;
+}
+
+/* Footer */
+footer {
+    background-color: #f2f1ed;
+    text-align: center;
+    padding: 30px;
 }
